# audio-loop

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  audio-loop.desktop  main.qrc  mainwindow.cpp  mainwindow.h  mytest.cpp  track.cpp  track.h
.github/workflows/: ci.yml  coverage.yml  lin.yml  mac.yml  qt-versions.yml  static.yml  win.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mytest.cpp  test.qrc  track.cpp
app/translations/: audio-loop_ru.ts
debian/: changelog  control  gbp.conf  rules
debian/patches/: 0001-cmake-fix.patch  0002-fix-readme.patch  series
gh-pages/: index.html
linux/applications/: audio-loop.desktop
python/: audio_loop.py  tests.py
rpm/: audio-loop.spec
